# mopidy-podcast-itunes

./: .gitignore  CHANGELOG.rst  CHANGES.rst  Changes  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
debian/: changelog  control  copyright  pydist-overrides
docs/: conf.py  config.rst  index.rst  install.rst  license.rst
mopidy_podcast_itunes/: __init__.py  backend.py  client.py  directory.py  ext.conf  library.py  test_extension.py  translator.py
src/mopidy_podcast_itunes/: __init__.py  backend.py  client.py  ext.conf  library.py  translator.py
tests/: conftest.py  test_browse.py  test_extension.py  test_search.py  test_translator.py
